--- a/index.html
+++ b/index.html
@@ -115,15 +115,13 @@
         </div>
         <div class="row">
           <a
-            href="https://candid-banoffee-726a3f.netlify.app/"
+            href="https://lustrous-florentine-113d7a.netlify.app/"
             target="_blank"
             class="col-xl-4 col-md-6 col-sm-12"
           >
             <div class="itd-roject"><i class="fa-solid fa-gamepad"></i></div>
-            <h5 class="text-center color-1">Tic-tac-toe</h5>
-            <h6 class="color-2 text-center">
-              Game between two opponents on a square field three by three cells
-            </h6>
+            <h5 class="text-center color-1">Quiz game</h5>
+            <h6 class="color-2 text-center">Vanilla JavaScript hangman game</h6>
             <h6 class="text-center color-1">HTML5, CSS3, JS</h6>
             <div class="line"></div>
           </a>
@@ -134,13 +132,24 @@
           >
             <div class="itd-roject"><i class="fa-solid fa-cloud-sun"></i></div>
             <h5 class="text-center color-1">Weather</h5>
-            <h6 class="color-2 text-center">
-              A weather forecast that has weather information anytime and
-              anywhere in real time
-            </h6>
+            <h6 class="color-2 text-center">A weather forecast in real time</h6>
             <h6 class="text-center color-1">HTML5, CSS3, JS, Bootstrap, API</h6>
             <div class="line"></div>
           </a>
+          <a
+            href="https://candid-banoffee-726a3f.netlify.app/"
+            target="_blank"
+            class="col-xl-4 col-md-6 col-sm-12"
+          >
+            <div class="itd-roject"><i class="fa-solid fa-gamepad"></i></div>
+            <h5 class="text-center color-1">Tic-tac-toe</h5>
+            <h6 class="color-2 text-center">
+              Vanilla JavaScript tic-tac-toe game
+            </h6>
+            <h6 class="text-center color-1">HTML5, CSS3, JS</h6>
+            <div class="line"></div>
+          </a>
+
           <a
             href="https://dulcet-fairy-47a668.netlify.app/"
             target="_blank"
@@ -148,9 +157,7 @@
           >
             <div class="itd-roject"><i class="fa-solid fa-calculator"></i></div>
             <h5 class="text-center color-1">Calculator</h5>
-            <h6 class="color-2 text-center">
-              Online calculator that performs arithmetic operations on numbers
-            </h6>
+            <h6 class="color-2 text-center">Online calculator</h6>
             <h6 class="text-center color-1">HTML5, CSS3, JS, Bootstrap</h6>
             <div class="line"></div>
           </a>
@@ -171,8 +178,8 @@
             class="col-xl-4 col-md-6 col-sm-12"
           >
             <div class="itd-roject"><i class="fa-solid fa-file"></i></div>
-            <h5 class="text-center color-1">Layout</h5>
-            <h6 class="color-2 text-center">Site layout</h6>
+            <h5 class="text-center color-1">HTML</h5>
+            <h6 class="color-2 text-center">HTML coding</h6>
             <h6 class="text-center color-1">HTML5, CSS3</h6>
             <div class="line"></div>
           </a>
