--- a/index.html
+++ b/index.html
@@ -35,65 +35,65 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill"><img src="img/html.png" alt="html" /></div>
             <h5 class="text-center">HTML</h5>
           </div>
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill"><img src="img/css.png" alt="css" /></div>
             <h5 class="text-center">CSS</h5>
           </div>
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill"><img src="img/js.png" alt="js" /></div>
             <h5 class="text-center">JavaScript</h5>
           </div>
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill">
               <img src="img/visual_studio.png" alt="visual_studio" />
             </div>
             <h5 class="text-center">Editor</h5>
           </div>
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill"><img src="img/api.png" alt="api" /></div>
             <h5 class="text-center">API</h5>
           </div>
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill">
               <img src="img/github.png" alt="github" />
             </div>
             <h5 class="text-center">GitHub</h5>
           </div>
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill">
               <img src="img/bootstrap.png" alt="bootstrap" />
             </div>
             <h5 class="text-center">Bootstrap</h5>
           </div>
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill">
               <img src="img/hosting.png" alt="hosting" />
             </div>
             <h5 class="text-center">Hosting</h5>
           </div>
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill">
               <img src="img/flexbox.png" alt="flexbox" />
             </div>
             <h5 class="text-center">Flexbox</h5>
           </div>
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill">
               <img src="img/google.png" alt="google" />
             </div>
             <h5 class="text-center">SEO</h5>
           </div>
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill">
               <img src="img/responsive.png" alt="responsive" />
             </div>
             <h5 class="text-center">Responsive</h5>
           </div>
-          <div class="col-xl-2 col-md-3 col-sm-4">
+          <div class="col-xl-2 col-md-3 col-4">
             <div class="itd-skill">
               <img src="img/react.png" alt="react" />
             </div>
