--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
         </div>
         <div class="row">
           <a
+            href="https://rad-sorbet-96908e.netlify.app"
+            target="_blank"
+            class="col-xl-4 col-md-6 col-sm-12"
+          >
+            <div class="itd-roject"><i class="fa-solid fa-cloud-sun"></i></div>
+            <h5 class="text-center color-1">Weather Forecast</h5>
+            <h6 class="color-2 text-center">
+              React weather forecast in real time
+            </h6>
+            <h6 class="text-center color-1">
+              HTML5, CSS3, React, Bootstrap, API
+            </h6>
+            <div class="line"></div>
+          </a>
+
+          <a
             href="https://lustrous-florentine-113d7a.netlify.app/"
             target="_blank"
             class="col-xl-4 col-md-6 col-sm-12"
@@ -125,6 +141,7 @@
             <h6 class="text-center color-1">HTML5, CSS3, JS</h6>
             <div class="line"></div>
           </a>
+
           <a
             href="https://whimsical-cassata-b3b0b4.netlify.app/"
             target="_blank"
@@ -132,10 +149,13 @@
           >
             <div class="itd-roject"><i class="fa-solid fa-cloud-sun"></i></div>
             <h5 class="text-center color-1">Weather</h5>
-            <h6 class="color-2 text-center">A weather forecast in real time</h6>
+            <h6 class="color-2 text-center">
+              Vanilla JS weather forecast in real time
+            </h6>
             <h6 class="text-center color-1">HTML5, CSS3, JS, Bootstrap, API</h6>
             <div class="line"></div>
           </a>
+
           <a
             href="https://candid-banoffee-726a3f.netlify.app/"
             target="_blank"
@@ -161,6 +181,7 @@
             <h6 class="text-center color-1">HTML5, CSS3, JS, Bootstrap</h6>
             <div class="line"></div>
           </a>
+
           <a
             href="https://darling-parfait-9c67d4.netlify.app/"
             target="_blank"
@@ -172,6 +193,7 @@
             <h6 class="text-center color-1">HTML5, CSS3, JS</h6>
             <div class="line"></div>
           </a>
+
           <a
             href="https://spectacular-naiad-a42a42.netlify.app"
             target="_blank"
@@ -183,6 +205,7 @@
             <h6 class="text-center color-1">HTML5, CSS3</h6>
             <div class="line"></div>
           </a>
+
           <a
             href="https://github.com/BoykoLena"
             target="_blank"
