added dictionary app

--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
         </div>
         <div class="row">
           <a
+            href="https://fluffy-llama-27f29f.netlify.app/"
+            target="_blank"
+            class="col-xl-4 col-md-6 col-sm-12"
+          >
+            <div class="itd-roject"><i class="fa-solid fa-book"></i></div>
+            <h5 class="text-center color-1">Dictionary</h5>
+            <h6 class="color-2 text-center">React dictionary app</h6>
+            <h6 class="text-center color-1">
+              HTML5, CSS3, React, Bootstrap, API
+            </h6>
+            <div class="line"></div>
+          </a>
+
+          <a
             href="https://rad-sorbet-96908e.netlify.app"
             target="_blank"
             class="col-xl-4 col-md-6 col-sm-12"
