some changes in header

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1 class="text-center text-white">
-              Hello! My name is Boyko Olena and I am a beginner Front-End
-              developer.
+            <h1 class="text-center text-white mb-5">
+              Hello! My name is Boyko Olena, I've been coding apps in React for
+              the last months and now I'm looking at a position as a Junior
+              React Developer.
             </h1>
             <a href="#footer" class="btn btn-itd btn-lg">Get contact</a>
           </div>
