--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             </h2>
           </div>
         </div>
-        <div class="row mb-5">
+        <div class="row">
           <div class="col-md-4 col-sm-12">
             <h2 class="text-center text-uppercase color-1 fw-bold">
               soft skills
